tests/idris2/basic/basic072/expected
1/1: Building Issue3327 (Issue3327.idr)
Error: While processing right hand side of test2. Trying to use linear name x in non-linear context.

Issue3327:11:11--11:12
 07 | 
 08 | test2 : IO ()
 09 | test2 = do
 10 |   1 x : Nat <- foo
 11 |   printLn x
                ^

Error: While processing right hand side of test3. x is not accessible in this context.

Issue3327:16:11--16:12
 12 | 
 13 | test3 : IO ()
 14 | test3 = do
 15 |   0 x : Nat <- foo
 16 |   printLn x
                ^

Error: While processing right hand side of test4. Trying to use linear name x in non-linear context.

Issue3327:21:11--21:12
 17 | 
 18 | test4 : IO ()
 19 | test4 = do
 20 |   1 x <- foo
 21 |   printLn x
                ^

Error: While processing right hand side of test5. x is not accessible in this context.

Issue3327:26:11--26:12
 22 | 
 23 | test5 : IO ()
 24 | test5 = do
 25 |   0 x <- foo
 26 |   printLn x
                ^

